# Curve-Maker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animationpreviewwidget.cpp  animationpreviewwidget.h  app_resource.aps  app_resource.rc  curvewidget.cpp  curvewidget.h  dark.qss  light.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  setcurvestatecommand.cpp  setcurvestatecommand.h  themes.qrc
